# unicode-script

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
scripts/: unicode.py
src/: lib.rs  tables.rs
